2nd Commit, tweaking positions and image scrolling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="style.css">
    </head>
 
@@ -17,11 +17,12 @@
       <div id="menu">
          <div class="menu-items">
             <a href="/" class="menu-item">Home</a>
-            <a href="/" class="menu-item">Shop</a>
             <a href="/" class="menu-item">About</a>
+            <a href="/" class="menu-item">Portfolio</a>
             <a href="/" class="menu-item">Contact</a>
          </div>
          <div id="menu-background-pattern"></div>
+         <div id="menu-background-pattern2"></div>
          <div id="menu-background-image"></div>
       </div>
 
